--- a/views/post.ejs
+++ b/views/post.ejs
@@ -4,8 +4,18 @@
 
 
 
-<h1> <%= tit  %> </h1>
-<p><%=top %> </p>
+    <h1>
+        <%= tit  %>
+    </h1>
+    <p>
+        <%=top %>
+    </p>
 
+    <form action="/delete" method="post">
 
-<%-include("partials/footer.ejs")-%>
+        <button type="submit" name="del" value="<%=id  %>"> Delete this Blog </button>
+    </form>
+
+    <a href="/edit/<%=id%>"><button>Edit</button></a>
+
+    <%-include("partials/footer.ejs")-%>
