--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,8 +17,15 @@
                 <li id="home"><a href="/">HOME</a></li>
                 <li id="about"><a href="/about">ABOUT US</a></li>
                 <li id="contact"><a href="/contact">CONTACT US</a></li>
+                <li id="register"> <a class="btn btn-light btn-lg" href="/register" role="button">Register</a></li>
+                <li id="login"><a class="btn btn-dark btn-lg" href="/login" role="button">Login</a></li>
+
             </ul>
+
+
         </div>
+
+
     </nav>
 
     <body>
