--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,1 @@
-</div>
-<div class="footer-padding"></div>
-<div class="footer">
-    <p>Made with ❤️ by MD ARIF</p>
-</div>
-</div>
-</body>
-
-</html>
+<h1>ARIF</h1>
