--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,9 @@
     padding-top: 70px;
     padding-bottom: 70px;
 }
+
 .navbar {
+    background-color: rgb(167, 183, 196);
     padding-top: 15px;
     padding-bottom: 15px;
     border: 0;
@@ -11,25 +13,31 @@
     font-size: 12px;
     letter-spacing: 5px;
 }
-.navbar-nav  li a:hover {
-    color: #1abc9c !important;
+
+.navbar-nav li a:hover {
+    color: #000000 !important;
 }
 
 .footer-padding {
-	padding-bottom: 60px;
+    padding-bottom: 60px;
 }
 
 .footer {
-	position: absolute;
-	text-align: center;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	background-color: #1abc9c;
+    position: absolute;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #bbcfcb;
 }
 
 .footer p {
-	margin-top: 25px;
-	font-size: 12px;
-  color: #fff;
+    margin-top: 25px;
+    font-size: 12px;
+    color: #fff;
+}
+
+.f {
+    margin: auto;
+    width: 100px;
 }
