--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,15 +10,15 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <p class="navbar-brand">DAILY JOURNAL</p>
+                <p class="navbar-brand">Personal Blog</p>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <!-- 6 -->
                 <li id="home"><a href="/">HOME</a></li>
                 <li id="about"><a href="/about">ABOUT US</a></li>
                 <li id="contact"><a href="/contact">CONTACT US</a></li>
-                <li id="register"> <a class="btn btn-light btn-lg" href="/register" role="button">Register</a></li>
-                <li id="login"><a class="btn btn-dark btn-lg" href="/login" role="button">Login</a></li>
+                <!-- <li id="register"> <a class="btn btn-light btn-lg" href="/register" role="button">Register</a></li>
+            <li id="login"><a class="btn btn-dark btn-lg" href="/login" role="button">Login</a></li> -->
 
             </ul>
 
